# cync

./: .envrc  .envrc.example  .gitignore  Cargo.toml  README.md  hello.txt
cync/: hello.txt2
src/: app.rs  config.rs  error.rs  file_viewer.rs  logging.rs  main.rs  s3.rs  setup.rs  ui.rs  util.rs
src/cync/: config.rs  file_viewer.rs  mod.rs
src/tui/: mod.rs  ui.rs
