[package]
name = "cync"
authors = ["Adi Subramanian"]
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/JuiceDrinker/cync"
repository = "https://github.com/JuiceDrinker/cync"
categories = ["command-line-utilities", "filesystem"]
description = "CLI for private file management"


[dependencies]
aws-sdk-s3 = "1.4.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"]}
md5 = "0.7.0"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
crossterm = "0.27.0"
ratatui = "0.26.3"
unicode-width = "0.1.12"
lazy_static = "1.4.0"
tracing-error = "0.2.0"
xdg = "2.5.2"
toml = "0.8.14"
clap = { version = "4.5.8", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
requestty = "0.5.0"
home = "0.5.9"
aws-smithy-runtime-api = { version = "1.7.1", features = ["client"] }
aws-smithy-async = "1.2.1"
